# RecSys_MAG

./: .gitattributes  .gitignore  CS554_Assignment_2_(Student).ipynb  README.md  pyproject.toml
scripts/: dataset.ipynb  load_data.py  load_data_BAKUP.py  train.py  train_hetro.py  visualize_citation_graph.py
scripts/dataset/: test.txt  train.txt  val.txt
scripts/models/: graph_sage.py  graph_sage_hetro.py
